tests/trybuild/bytes_fail.stderr
error: failed to parse string as byte size: couldn't parse "not-a-size" into a ByteSize, cannot parse float from empty string
 --> tests/trybuild/bytes_fail.rs:2:16
  |
2 |   lits::bytes!("not-a-size");
  |                ^^^^^^^^^^^^
