tests/trybuild/bytes_fail.rs
fn main() {
  lits::bytes!("not-a-size");
}
